<resources>
    <string name="app_name">Buy Me Now</string>
    <string name="powered_by_litu">Powered by Litu ©2003</string>
    <string name="password">Password</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="username">UserName</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_log_in">Already have an account? Log In</string>
    <string name="login">LOGIN</string>
    <string name="new_one_dude_come_over_let_s_sign_up">New one Dude? Come over let\'s Sign Up</string>
    <string name="log_out">LOG OUT</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="notification">Notification</string>
    <string name="settings">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_name">Category Name</string>
    <string name="category">Category</string>
    <string name="see_all">See All</string>
    <string name="new_products">New Products</string>
    <string name="we_provide_best_products">We provide best products.</string>
    <string name="popular_products">Popular Products</string>
    <string name="oppo_reno_8_pro_5g">Oppo Reno 8 Pro 5G</string>
    <string name="rs_45_999">Rs 45999</string>
    <string name="rs_28_859">Rs 28859</string>
    <string name="one_plus_nord_2t_5g">One Plus Nord 2T 5G</string>
    <string name="apple_iphone_12">Apple iPhone 12</string>
    <string name="rs_59_999">Rs 59999</string>
    <string name="buy_me_now">Buy Me Now</string>
    <string name="upload_dp">Upload DP</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="buy_now">BUY NOW</string>
    <string name="cart_section">CART SECTION</string>
    <string name="quantity">QUANTITY</string>
    <string name="my_cart">My Cart</string>
    <string name="remove_from_cart">Remove From Cart</string>
    <string name="product_price">Product Price:</string>
    <string name="product_name">Product Name:</string>
    <string name="current_time">Current Time:</string>
    <string name="current_date">Current Date:</string>
    <string name="total_price_rs">Total Price : Rs</string>
    <string name="total">Total : Rs </string>
    <string name="check_out">Check Out</string>
    <string name="subtotal">Subtotal</string>
    <string name="discount">Discount</string>
    <string name="shipping">Shipping</string>
    <string name="payment_section">Payment Section</string>
    <string name="remove_item">Remove Item</string>
    <string name="login_">Login</string>
    <string name="create_address">Create Address</string>
    <string name="add_address">Add Address</string>
    <string name="continue_to_payment">Continue to payment</string>
    <string name="pay_now">Pay Now</string>
</resources>