<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Login"
    android:gravity="center"
    android:background="@drawable/register">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/coverImg"
        app:cardElevation="10dp"
        app:cardCornerRadius="100dp"
        android:layout_centerHorizontal="true"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/logo" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cardRegister"
        app:cardElevation="10dp"
        android:layout_below="@id/coverImg"
        app:cardCornerRadius="30dp"
        android:layout_margin="40dp"
        android:backgroundTint="#efee"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/rts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/aclonica"
                android:gravity="center"
                android:text="@string/login_"
                android:textColor="#ff003d"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_below="@id/rts"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="15sp"
                android:drawableStart="@drawable/ic_baseline_mail_24"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_margin="5dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_below="@id/loginEmail"
                android:id="@+id/loginPassword"
                android:drawableStart="@drawable/ic_baseline_security_24"
                />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginPassword"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:text="@string/login"
                android:backgroundTint="@color/black"
                android:drawableLeft="@drawable/ic_baseline_login_24"
                />

            <TextView
                android:id="@+id/registerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/new_one_dude_come_over_let_s_sign_up"
                android:textColor="#0099FF"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>